<resources>
    <string name="app_name">LabRat</string>
    <string name="signIn">Sign In</string>
    <string name="not_registered">The user is not yet registered</string>
    <string name="registered">The user is already Registered</string>
    <string name="reg_successful">Registration Successfully Completed</string>
    <string name="permission_Accounts">LabRat Needs to be able to Access Your Google Account To Proceed</string>
    <string name="permission_Accounts_Header">Accounts Required</string>
    <string name="googlebutton">Sign in with Google</string>
    <string name="university_Num">University Number</string>
    <string name="lecturer">I am a lecturer</string>
    <string name="email">email address</string>
    <string name="search_title">search</string>

    <!-- Title Bar Text-->
    <string name="title_login">Labrat Login</string>
    <string name="title_schdule">My Schedule</string>
    <string name="title_classes">Available Classes</string>
    <string name="title_venues">Venues</string>
    <string name="title_devblog">Development Blog</string>

    <!-- FragmentLab Srings-->
    <string name="spinner_select">Select a Venue</string>

    <string name="dialog_already_booked">There is already a class in that slot</string>

    <!--Dialog Strings-->
    <string name="classes_in_venue">Classes Booked for This Venue Today</string>
    <string name="btnOkay">OK</string>
    <string name="btnProceed">Proceed</string>
    <string name="add_class">Create a Class</string>
    <string name="edit_class">Edit or Delete a Class</string>
    <string name="delete_class">Delete Class</string>
    <string name="select_module">Select Module</string>
    <string name="select_venue">Select Venue</string>
    <string name="select_period">Select Period</string>
    <string name="select_day">Select Day</string>
    <string name="moreDetails">Just a Few More Details</string>
    <string name="class_Heading">Add Class</string>
    <string-array name="daysArray">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string-array name="periodArray">
        <item>08:00</item>
        <item>09:30</item>
        <item>11:00</item>
        <item>12:30</item>
        <item>14:00</item>
        <item>15:30</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!--Snackbar/Toast Strings-->
    <string name="class_added">Class Added to Schedule</string>
    <string name="class_removed">Class Removed From Schedule</string>
    <string name="signed_out">Successfully Signed Out</string>
    <string name="failed_signin">Login Unsuccessful</string>

    <!--Side Drawer Strings-->
    <string name="menuItemVenue">Venues</string>
    <string name="menuItemDevBlog">Development Blog</string>
    <string name="menuItemSchdule">My Schedule</string>
    <string name="menuItemSignOut">Sign Out</string>
    <string name="menuItemClasses">Class</string>
    <string name="menuItemModules">Modules</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--DevBlog Titles-->
    <string name="devblog_title_android_developers">Android Developers</string>
    <string name="devblog_title_google_developers">Google Developers</string>
    <string name="devblog_title_android_hive">Android Hive</string>
    <string name="devblog_title_stack_overflow">Stack Overflow</string>
    <string name="devblog_title_android_studio">Android Studio</string>
    <string name="devblog_title_sqlite">SQLite</string>
    <string name="devblog_title_git">Git</string>
    <string name="devblog_title_github">Github</string>
    <string name="devblog_title_icons8">Icons8</string>

    <!-- DevBlog Articles-->
    <string name="devblog_article_android_developers">Android Developers is the official site for all thing (development related) android. The site provides everything form Reference documentation to API guides that prove invaluable to newbie Android Developers. The Youtube channel also provides even more video resources to aid developers in implementing and understanding certain android development concepts</string>
    <string name="devblog_article_google_developers">Google Developers (much like Android developers) is the go to resource for all of Google\'s services and gives developers handy examples and sample code as well as great Youtube resource videos. This resource came in handy fro the implementation of the Google Sign in</string>
    <string name="devblog_article_android_hive">This resource was especially handy for some things that were not made clear enough for novice  Android developers on the Google and Android Developers websites. it is packed with many tutorials with thorough explanations</string>
    <string name="devblog_article_android_stack_overflow">Not many programmers (if any) can say they can live without going through stack overflow. If you have a programming question, its probably already been answered on Stack Overflow. very useful for quick answers to things that I felt weren\'t clearly highlighted in Android Developers</string>
    <string name="devblog_article_android_studio">The de facto standard when it comes Android development. This IDE has a multitude of features tha could take an app alone to go through. Some of its more useful features include intelligent code completion, great UI editor support for a multitude of plugins and not to mention amazing debugging capabilities and version control integration</string>
    <string name="devblog_article_sqlite">An open source database library which provides a standalone database for embedded projects (such as Android apps). A bit of a pain to work it in the beginning on Android, but once the user gets the hang of it, it almost became second nature. Great simple database implementation that is also light on resources</string>
    <string name="devblog_article_git">Great Version control software that allows tracking of changes in your code, ensuring I always have checkpoint-like stages of my app, allowing me to track my progress and revert any (retarded) errors easily back to any point where I see acceptable</string>
    <string name="devblog_article_github">With Git version control working, Github allows online hosting of your Git projects on their servers. This allowed safe backups of this app and online tracking of changes made while allowing me to work in different locations (be it home or campus)</string>
    <string name="devblog_article_icons8">Icons Galore. This resource is an amazing tool to use for developers who require tons (literally) of free icons to use in their designs</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="link_android_developers">https://developer.android.com/index.html</string>
    <string name="link_google_developers">https://developers.google.com/identity/</string>
    <string name="link_android_hive">http://www.androidhive.info/</string>
    <string name="link_stack_overflow">http://stackoverflow.com/questions/tagged/android</string>
    <string name="link_android_studio">https://developer.android.com/studio/index.html</string>
    <string name="link_sqlite">https://sqlite.org/</string>
    <string name="link_git">https://git-scm.com/</string>
    <string name="link_github">https://github.com/about</string>
    <string name="link_icons8">https://icons8.com</string>

    <string name="btnSwitchViewTimeline">View Timeline</string>
    <string name="btnSwitchViewResources">View Development Resources</string>


    <!--TimeLine Strings (Titles)-->
    <string name="timeline_title_week1">Week One (Working On The Database)</string>
    <string name="timeline_title_week2">Week Two (Sitting on my hands &#8230; sort of)</string>
    <string name="timeline_title_week3">Week Three (Coming Together Nicely)</string>
    <string name="timeline_title_week4">Week Four (Crunch Time Approaching)</string>
    <string name="timeline_title_week5">Week Five (2nd Most Productive Week)</string>
    <string name="timeline_title_week6">Week Six (Final Touch Ups and TimeLine)</string>

    <!--TimeLine Strings (Articles)-->
    <string name="timeline_article_week1">The database, (probably the most tedious job and definitely the most underestimated) took two days alone to take care of, and even then was only about 75% done, All i had really done was take care of the contract class (which would prove to be invaluable) and create the data model and eventual database</string>
    <string name="timeline_article_week2">A Common occurrence this semester, but honestly this time it was more due to trying to focus on exams and get them out of the way, at least this time wasn\'t wasted as I took some time to draw out how my layouts would look and function on paper.</string>
    <string name="timeline_article_week3">This was the week where a lot of the work was coming together nicely. It was by far the slowest week as it was filled with steep learning curves and speedhumps, but this week proved to be the must productive despite it not reflecting visually on the application, yet</string>
    <string name="timeline_article_week4">As the presentation date approaches I realised I might not complete the project to the degree I wold have liked. Working through the night, I strongly considered taking the 2nd opportunity exam opportunity, and at 04:00am my brain made the decision for me. It just died. No Development Blog in Sight</string>
    <string name="timeline_article_week5">This week was filled the creation of the Development blog, minor touch ups to UI elements and database interactions and fixing of a few minor bugs, The decision to hold of presentation seemed like a good one at this point</string>
    <string name="timeline_article_week6">Finally the Timeline was being done (Left it till late because it would document my progress, duh) and I hae to say Im proud of what I have created. Not the most groundbreaking design but it has all I need to get a decent mark</string>



</resources>
