<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/dark_schedule"
            android:title="@string/menuItemSchdule" />
        <item
            android:id="@+id/nav_classes"
            android:icon="@drawable/dark_classroom"
            android:title="@string/menuItemClasses" />
        <item
            android:id="@+id/nav_modules"
            android:icon="@drawable/dark_module"
            android:title="@string/menuItemModules" />
        <item
            android:id="@+id/nav_venues"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menuItemVenue" />
    </group>

    <group>
        <item
            android:id="@+id/nav_devBlog"
            android:icon="@drawable/dark_source_code"
            android:title="@string/menuItemDevBlog" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/dark_user"
            android:title="@string/menuItemSignOut" />
    </group>
</menu>
