<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:orientation="vertical"
    android:layout_height="match_parent">
    
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@color/blue400"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/starWhite"
            android:text="@string/timeline_title_week1"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/starWhite"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/starWhite"
                android:text="@string/timeline_article_week1"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v4.widget.Space android:layout_width="match_parent" android:layout_height="10dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@color/blue500"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/starWhite"
                android:text="@string/timeline_title_week2"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/starWhite"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/starWhite"
                android:text="@string/timeline_article_week2"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v4.widget.Space android:layout_width="match_parent" android:layout_height="10dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/whitesmoke"
                android:text="@string/timeline_title_week3"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/starWhite"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/whitesmoke"
                android:text="@string/timeline_article_week4"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v4.widget.Space android:layout_width="match_parent" android:layout_height="10dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@color/blue700"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/whitesmoke"
                android:text="@string/timeline_title_week4"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/starWhite"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/whitesmoke"
                android:text="@string/timeline_article_week4"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v4.widget.Space android:layout_width="match_parent" android:layout_height="10dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@color/blue800"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/whitesmoke"
                android:text="@string/timeline_title_week5"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/starWhite"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/whitesmoke"
                android:text="@string/timeline_article_week5"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v4.widget.Space android:layout_width="match_parent" android:layout_height="10dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@color/blue900"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/whitesmoke"
                android:text="@string/timeline_title_week6"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/starWhite"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/whitesmoke"
                android:text="@string/timeline_article_week6"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v4.widget.Space android:layout_width="match_parent" android:layout_height="10dp" />
</LinearLayout>
